--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,13 +7,21 @@ environment:
   sdk: '>=3.0.5 <4.0.0'
 
 dependencies:
+  connectivity: ^3.0.6
+  dartz: ^0.10.1
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
+  get_it: ^7.6.0
+  http: ^1.0.0
+  shared_preferences: ^2.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  mockito: ^5.4.2
 
 flutter:
   uses-material-design: true
