--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,1 +1,26 @@
-include: package:flutter_lints/flutter.yaml
+
+include: package:lints/recommended.yaml
+
+analyzer:
+  exclude: 
+    - lib/client.dart
+    - lib/server/*.g.dart
+    - test/_data/**
+  language:
+    strict-casts: true
+    strict-raw-types: true
+
+linter:
+  rules:
+    - always_declare_return_types
+    - cancel_subscriptions
+    - close_sinks
+    - collection_methods_unrelated_type
+    - combinators_ordering
+    - comment_references
+    - dangling_library_doc_comments
+    - implicit_call_tearoffs
+    - invalid_case_patterns
+    - file_names
+    - sort_pub_dependencies
+    - use_key_in_widget_constructors
