--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,10 @@ dependencies:
   shared_preferences: ^2.1.2
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  lints: ^2.1.1
   mockito: ^5.4.2
 
 flutter:
